# f2c-cmake

./: CMakeLists.txt  README.md  f2c.h  f2cConfig.cmake.in  rm-pkg.sh
src/: CMakeLists.txt  defines.h  defs.h  format.c  formatdata.c  gram.c  main.c  mem.c  misc.c  p1output.c  proc.c  sysdep.c  sysdep.h
src-libs/libF77/: CMakeLists.txt  c_abs.c  c_cos.c  c_div.c  c_exp.c  c_log.c  c_sin.c  c_sqrt.c  pow_ci.c  r_cnjg.c  r_imag.c  uninit.c
src-libs/libI77/: CMakeLists.txt  err.c  f2ch.add  typesize.c  util.c
